force-app/main/default/objects/Case/fields/Event_Recurrence_Interval__c.field-meta.xml
<CustomField>
    <fullName>Event_Recurrence_Interval__c</fullName>
    <description>Event Recurrence Interval information to support  SFDC to Acron Integration</description>
    <label>Event Recurrence Interval</label>
    <length>125</length>
    <type>Text</type>
</CustomField>