force-app/main/default/objects/Case/fields/Event_Recurrence_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Event_Recurrence_Type_Code__c</fullName>
    <description>Event Recurrence Type information to support  SFDC to Acron Integration</description>
    <label>Event Recurrence Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>