force-app/main/default/objects/Case/fields/Exclude_Holidays__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Holidays__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Exclude Holidays</label>
    <type>Checkbox</type>
</CustomField>