force-app/main/default/objects/Case/fields/Exclude_Saturdays__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Saturdays__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Exclude Saturdays</label>
    <type>Checkbox</type>
</CustomField>