force-app/main/default/objects/Case/fields/Exclude_Sundays__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Sundays__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Exclude Sundays</label>
    <type>Checkbox</type>
</CustomField>