force-app/main/default/objects/Case/fields/Flow_URL__c.field-meta.xml
<CustomField>
    <fullName>Flow_URL__c</fullName>
    <description>This is technical field to hold hyperlink to display on Email template</description>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))&amp;&quot;/flow/Change_Task_Assignment?TaskId=&quot;&amp;Task_Id_For_Flow_URL__c&amp;&quot;&amp;retURL=&quot;&amp;Task_Id_For_Flow_URL__c,&quot;TaskRecordLink&quot;)</formula>
    <label>Flow URL</label>
    <type>Text</type>
</CustomField>