force-app/main/default/objects/Case/fields/FlowTimeToRun__c.field-meta.xml
<CustomField>
    <fullName>FlowTimeToRun__c</fullName>
    <label>FlowTimeToRun</label>
    <type>DateTime</type>
</CustomField>