force-app/main/default/objects/Case/fields/FlowToRun__c.field-meta.xml
<CustomField>
    <fullName>FlowToRun__c</fullName>
    <label>FlowToRun</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Create Task FrameWork Process</fullName>
            </value>
            <value>
                <fullName>Process of Non Pickup Task framework</fullName>
            </value>
            <value>
                <fullName>Work Order Creation</fullName>
            </value>
            <value>
                <fullName>Invoke Pattern Match</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>