force-app/main/default/objects/Case/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <type>TextArea</type>
</CustomField>