force-app/main/default/objects/Case/fields/Hand_Wash_Station_Type__c.field-meta.xml
<CustomField>
    <fullName>Hand_Wash_Station_Type__c</fullName>
    <description>Asset/Product related questionnaire information on a Case to support  SFDC to Acron Integration</description>
    <label>Hand Wash Station Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Double</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>