force-app/main/default/objects/Case/fields/Has_the_issue_been_resolved__c.field-meta.xml
<CustomField>
    <fullName>Has_the_issue_been_resolved__c</fullName>
    <description>answer from the flow</description>
    <label>Has the power issue been resolved?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Does_the_container_have_power__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>