force-app/main/default/objects/Case/fields/Haul_Away_information__c.field-meta.xml
<CustomField>
    <fullName>Haul_Away_information__c</fullName>
    <label>Haul Away information</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Haul Away + Asset Available + End date Available+ Hauler Available</fullName>
            </value>
            <value>
                <fullName>Haul Away + Asset Available + End date Available + No Hauler Available</fullName>
            </value>
            <value>
                <fullName>Haul Away + Asset Available + No End date Available</fullName>
            </value>
            <value>
                <fullName>Haul Away + No Asset Available + Hauler Available</fullName>
            </value>
            <value>
                <fullName>Haul Away + No Asset Available + No Hauler Available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>