force-app/main/default/objects/Case/fields/Haul_Away_Service_Booked__c.field-meta.xml
<CustomField>
    <fullName>Haul_Away_Service_Booked__c</fullName>
    <description>An identifier on the case to determine whether the Haul Away service is booked or not.</description>
    <label>Haul Away Service Booked</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>