force-app/main/default/objects/Case/fields/Haul_Away_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Haul_Away_Vendor__c</fullName>
    <description>For SDT 44574, for haul away Quotelines this field is populated based on location and Associated case&apos;s Haul_Away_Vendor, This should be revised if salesforce record exists and in future if there is any change in acorn</description>
    <inlineHelpText>SDT 445744, for haul away Quotelines this field is populated based on location and Associated case&apos;s Haul_Away_Vendor(api name), in future if these vendor names gets change in acorn one shall change these api names as well</inlineHelpText>
    <label>Haul Away Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Available</fullName>
            </value>
            <value>
                <fullName>223110_5378</fullName>
                <label>Got Junk</label>
            </value>
            <value>
                <fullName>7803</fullName>
                <label>Junk King</label>
            </value>
            <value>
                <fullName>8601_9239</fullName>
                <label>Check Sammy</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>