force-app/main/default/objects/Case/fields/Ignore_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Duplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>On true ignores duplicate case check</description>
    <label>Ignore Duplicate</label>
    <type>Checkbox</type>
</CustomField>