force-app/main/default/objects/Case/fields/Instructions_for_the_driver__c.field-meta.xml
<CustomField>
    <fullName>Instructions_for_the_driver__c</fullName>
    <inlineHelpText>ie. Leave the keys in the mailbox, call Joe when onsite, drop off in office, etc.</inlineHelpText>
    <label>Instructions for the driver</label>
    <type>TextArea</type>
</CustomField>