force-app/main/default/objects/Case/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <description>SDT-39047 Invoice number captured from the billing inquiry flow</description>
    <inlineHelpText>Invoice Number cannot exceed 15 characters.</inlineHelpText>
    <label>Invoice Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>