force-app/main/default/objects/Case/fields/Is_ByPassWO__c.field-meta.xml
<CustomField>
    <fullName>Is_ByPassWO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To by pass the workorder</description>
    <label>Is ByPassWO</label>
    <type>Checkbox</type>
</CustomField>