force-app/main/default/objects/Case/fields/Is_Case_CSC_Created__c.field-meta.xml
<CustomField>
    <fullName>Is_Case_CSC_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Design Story:7434</description>
    <label>Is Case CSC Created</label>
    <type>Checkbox</type>
</CustomField>