force-app/main/default/objects/Case/fields/Is_Case_OSC_Created__c.field-meta.xml
<CustomField>
    <fullName>Is_Case_OSC_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Case OSC Created</label>
    <type>Checkbox</type>
</CustomField>