force-app/main/default/objects/Case/fields/Is_Clone__c.field-meta.xml
<CustomField>
    <fullName>Is_Clone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Captures clone event.  SDT 4473</description>
    <label>Is Clone</label>
    <type>Checkbox</type>
</CustomField>