force-app/main/default/objects/Case/fields/Is_Electrical_Workers__c.field-meta.xml
<CustomField>
    <fullName>Is_Electrical_Workers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Asset/Product related questionnaire information on a Case to support  SFDC to Acron Integration</description>
    <label>Is Electrical Workers?</label>
    <type>Checkbox</type>
</CustomField>