force-app/main/default/objects/Case/fields/Is_From_ScreenPop__c.field-meta.xml
<CustomField>
    <fullName>Is_From_ScreenPop__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is From ScreenPop</label>
    <type>Checkbox</type>
</CustomField>