force-app/main/default/objects/Case/fields/Is_Haul_Away_Service__c.field-meta.xml
<CustomField>
    <fullName>Is_Haul_Away_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is a flag to bring the Chargeability as a mandatory field in the required info page</description>
    <label>Is Haul Away Service</label>
    <type>Checkbox</type>
</CustomField>