force-app/main/default/objects/Case/fields/Is_Info_Task_Created__c.field-meta.xml
<CustomField>
    <fullName>Is_Info_Task_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether Obtain Customer info Task is created.</description>
    <label>Is Info Task Created</label>
    <type>Checkbox</type>
</CustomField>