force-app/main/default/objects/Case/fields/Is_Monitored__c.field-meta.xml
<CustomField>
    <fullName>Is_Monitored__c</fullName>
    <description>To determine if the haul is monitored</description>
    <formula>Asset.Is_Monitored__c = True</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Monitored?</label>
    <type>Checkbox</type>
</CustomField>