force-app/main/default/objects/Case/fields/Is_MultiCase_TaskBundling__c.field-meta.xml
<CustomField>
    <fullName>Is_MultiCase_TaskBundling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_MultiCase_TaskBundling</label>
    <type>Checkbox</type>
</CustomField>