force-app/main/default/objects/Case/fields/Is_Multiple_Asset__c.field-meta.xml
<CustomField>
    <fullName>Is_Multiple_Asset__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Multiple Asset</label>
    <type>Checkbox</type>
</CustomField>