force-app/main/default/objects/Case/fields/Is_Multiple_Case_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Is_Multiple_Case_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if any case has checked this checkbox then after filling other case information, We are cloning this case with selected number of dates by user.</description>
    <label>Is Multiple Case Allowed</label>
    <type>Checkbox</type>
</CustomField>