force-app/main/default/objects/Case/fields/Is_Multiple_Case_Per_ServiceDT__c.field-meta.xml
<CustomField>
    <fullName>Is_Multiple_Case_Per_ServiceDT__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is created to track multiple case per service date</description>
    <label>Is_Multiple_Case_Per_ServiceDT</label>
    <type>Checkbox</type>
</CustomField>