force-app/main/default/objects/Case/fields/Is_Multivendor__c.field-meta.xml
<CustomField>
    <fullName>Is_Multivendor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>true when its multivendor case</description>
    <label>Is Multivendor</label>
    <type>Checkbox</type>
</CustomField>