force-app/main/default/objects/Case/fields/Is_PSI_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_PSI_Required__c</fullName>
    <formula>IF( Account.PSI_Required__c == true,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is PSI Required</label>
    <type>Checkbox</type>
</CustomField>