force-app/main/default/objects/Case/fields/Is_Recreated__c.field-meta.xml
<CustomField>
    <fullName>Is_Recreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Recreated?</label>
    <type>Checkbox</type>
</CustomField>