force-app/main/default/objects/Case/fields/Is_the_compactor_leaking__c.field-meta.xml
<CustomField>
    <fullName>Is_the_compactor_leaking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>answer from the repair flow</description>
    <label>Is the compactor leaking?</label>
    <type>Checkbox</type>
</CustomField>