force-app/main/default/objects/Case/fields/Is_the_door_closed_and_sealed__c.field-meta.xml
<CustomField>
    <fullName>Is_the_door_closed_and_sealed__c</fullName>
    <description>answer from the repair flow</description>
    <label>Is the door closed and sealed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>