force-app/main/default/objects/Case/fields/Is_With_Lock__c.field-meta.xml
<CustomField>
    <fullName>Is_With_Lock__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Asset/Product related questionnaire information on a Case to support  SFDC to Acron Integration</description>
    <label>Is With Lock?</label>
    <type>Checkbox</type>
</CustomField>