force-app/main/default/objects/Case/fields/isApproved__c.field-meta.xml
<CustomField>
    <fullName>isApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>checkbox marking if the case was approved</description>
    <label>isApproved</label>
    <type>Checkbox</type>
</CustomField>