force-app/main/default/objects/Case/fields/IsAutoReplySent__c.field-meta.xml
<CustomField>
    <fullName>IsAutoReplySent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check if chat now auto reply is sent.</description>
    <label>IsAutoReplySent</label>
    <type>Checkbox</type>
</CustomField>