force-app/main/default/objects/Case/fields/isIndicoCaseUpdate__c.field-meta.xml
<CustomField>
    <fullName>isIndicoCaseUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isIndicoCaseUpdate</label>
    <type>Checkbox</type>
</CustomField>