force-app/main/default/objects/Case/fields/isMultiCalendarChecked__c.field-meta.xml
<CustomField>
    <fullName>isMultiCalendarChecked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field check multicase feature invoke in case</description>
    <label>isMultiCalendarChecked</label>
    <type>Checkbox</type>
</CustomField>