force-app/main/default/objects/Case/fields/IsOpportunity_Created__c.field-meta.xml
<CustomField>
    <fullName>IsOpportunity_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Opportunity Created</label>
    <type>Checkbox</type>
</CustomField>