force-app/main/default/objects/Case/fields/isRejected__c.field-meta.xml
<CustomField>
    <fullName>isRejected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>checkbox showing if the case was rejected</description>
    <label>isRejected</label>
    <type>Checkbox</type>
</CustomField>