force-app/main/default/objects/Case/fields/isWorkOrderCreated__c.field-meta.xml
<CustomField>
    <fullName>isWorkOrderCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isWorkOrderCreated</label>
    <type>Checkbox</type>
</CustomField>