force-app/main/default/objects/Case/fields/Last_Agent_ID__c.field-meta.xml
<CustomField>
    <fullName>Last_Agent_ID__c</fullName>
    <label>Last Agent ID</label>
    <length>128</length>
    <type>Text</type>
</CustomField>