force-app/main/default/objects/Case/fields/Last_Agent_Id_ForTaskAssignment__c.field-meta.xml
<CustomField>
    <fullName>Last_Agent_Id_ForTaskAssignment__c</fullName>
    <description>This is technical field used to store the id of the last agent on the case so that it will be used to do task assignments</description>
    <label>Last Agent Id ForTaskAssignment</label>
    <length>18</length>
    <type>Text</type>
</CustomField>