force-app/main/default/objects/Case/fields/Last_Customer_Interaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Last_Customer_Interaction_ID__c</fullName>
    <description>The connection ID or interaction ID of the last customer call or email respectively</description>
    <label>Last Customer Interaction ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>