force-app/main/default/objects/Case/fields/Last_Customer_Interaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Last_Customer_Interaction_Type__c</fullName>
    <description>The media type of the last customer interaction.  For example:  &quot;voice&quot;, or &quot;email&quot;</description>
    <label>Last Customer Interaction Type</label>
    <length>16</length>
    <type>Text</type>
</CustomField>