force-app/main/default/objects/Case/fields/Locally_Billed__c.field-meta.xml
<CustomField>
    <fullName>Locally_Billed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Locally Billed</label>
    <type>Checkbox</type>
</CustomField>