force-app/main/default/objects/Case/fields/Location_Code__c.field-meta.xml
<CustomField>
    <fullName>Location_Code__c</fullName>
    <description>Location Account&apos;s location code</description>
    <formula>Location__r.Location_Code__c</formula>
    <label>Location Code</label>
    <type>Text</type>
</CustomField>