force-app/main/default/objects/Case/fields/Location_Name_Email_Temp__c.field-meta.xml
<CustomField>
    <fullName>Location_Name_Email_Temp__c</fullName>
    <description>Field to hold name of parent account of the location. To be used in email templates.</description>
    <formula>Location__r.Parent.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Name Email Temp</label>
    <type>Text</type>
</CustomField>