force-app/main/default/objects/Case/fields/LocationOffset__c.field-meta.xml
<CustomField>
    <fullName>LocationOffset__c</fullName>
    <formula>Account.tz__UTC_Offset_F__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LocationOffset</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>