force-app/main/default/objects/Case/fields/LocationTimezone__c.field-meta.xml
<CustomField>
    <fullName>LocationTimezone__c</fullName>
    <formula>Account.tz__Timezone_F__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LocationTimezone</label>
    <type>Text</type>
</CustomField>