force-app/main/default/objects/Case/fields/Manual_Invocation__c.field-meta.xml
<CustomField>
    <fullName>Manual_Invocation__c</fullName>
    <label>Manual Invocation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>