force-app/main/default/objects/Case/fields/Mark_to_delete__c.field-meta.xml
<CustomField>
    <fullName>Mark_to_delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MarkToDelete-Old</label>
    <type>Checkbox</type>
</CustomField>