force-app/main/default/objects/Case/fields/MarkToDelete__c.field-meta.xml
<CustomField>
    <fullName>MarkToDelete__c</fullName>
    <label>MarkToDelete</label>
    <length>6</length>
    <type>Text</type>
</CustomField>