force-app/main/default/objects/Case/fields/Master_Intake_Complete__c.field-meta.xml
<CustomField>
    <fullName>Master_Intake_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Master Intake Complete</label>
    <type>Checkbox</type>
</CustomField>