force-app/main/default/objects/Case/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Material</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Location__c</field>
            <operation>equals</operation>
            <valueField>Asset.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>Asset.Material_Type__c</field>
            <operation>equals</operation>
            <value>Service Header</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>