force-app/main/default/objects/Case/fields/Material_Grade__c.field-meta.xml
<CustomField>
    <fullName>Material_Grade__c</fullName>
    <description>Material grade information to support  SFDC to Acron Integration</description>
    <label>Material Grade</label>
    <length>125</length>
    <type>Text</type>
</CustomField>