force-app/main/default/objects/Case/fields/Material_Type__c.field-meta.xml
<CustomField>
    <fullName>Material_Type__c</fullName>
    <description>Material Type information to support  SFDC to Acron Integration</description>
    <label>Material Type</label>
    <length>125</length>
    <type>Text</type>
</CustomField>