force-app/main/default/objects/Case/fields/Milestone_Entry_Time__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Entry_Time__c</fullName>
    <description>The time that the case entered the current Milestone.</description>
    <inlineHelpText>Used to accurately create due dates for tasks that reps will be completing.</inlineHelpText>
    <label>Milestone Entry Time</label>
    <type>DateTime</type>
</CustomField>