force-app/main/default/objects/Case/fields/Milestone_Warning_1__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Warning_1__c</fullName>
    <description>Holds the Warning Time for the Current Milestone of this case</description>
    <label>Milestone Warning 1</label>
    <type>DateTime</type>
</CustomField>