force-app/main/default/objects/Case/fields/Multiple_Dates__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Dates__c</fullName>
    <description>To store the use selected dates value from Case PoC page.</description>
    <label>Multiple Dates</label>
    <length>255</length>
    <type>Text</type>
</CustomField>