force-app/main/default/objects/Case/fields/New_Asset__c.field-meta.xml
<CustomField>
    <fullName>New_Asset__c</fullName>
    <label>New Asset</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10 Yard Open Top</fullName>
            </value>
            <value>
                <fullName>25 Yard Open Top</fullName>
            </value>
            <value>
                <fullName>30 Yard Open Top</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>