force-app/main/default/objects/Case/fields/No_Price__c.field-meta.xml
<CustomField>
    <fullName>No_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If request will have no price associated</description>
    <label>No Price</label>
    <type>Checkbox</type>
</CustomField>