force-app/main/default/objects/Case/fields/No_Service_Evidence__c.field-meta.xml
<CustomField>
    <fullName>No_Service_Evidence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Service Evidence</label>
    <type>Checkbox</type>
</CustomField>