force-app/main/default/objects/Case/fields/Occurrence__c.field-meta.xml
<CustomField>
    <fullName>Occurrence__c</fullName>
    <label>Occurrence</label>
    <type>TextArea</type>
</CustomField>