force-app/main/default/objects/Case/fields/Occurs__c.field-meta.xml
<CustomField>
    <fullName>Occurs__c</fullName>
    <label>Occurs</label>
    <type>TextArea</type>
</CustomField>