force-app/main/default/objects/Case/fields/Offsite_Address__c.field-meta.xml
<CustomField>
    <fullName>Offsite_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offsite Address</label>
    <type>Checkbox</type>
</CustomField>