force-app/main/default/objects/Case/fields/Offsite_City__c.field-meta.xml
<CustomField>
    <fullName>Offsite_City__c</fullName>
    <label>Alternate City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>