force-app/main/default/objects/Case/fields/Offsite_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Offsite_Postal_Code__c</fullName>
    <inlineHelpText>Postal Code, limited to 7 characters, of an offsite or locally billed address</inlineHelpText>
    <label>Alternate Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>