force-app/main/default/objects/Case/fields/Offsite_State__c.field-meta.xml
<CustomField>
    <fullName>Offsite_State__c</fullName>
    <label>Alternate State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>States</valueSetName>
    </valueSet>
</CustomField>