force-app/main/default/objects/Case/fields/Offsite_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Offsite_Street_Address__c</fullName>
    <label>Alternate Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>