force-app/main/default/objects/Case/fields/Onsite_Contact_Phone_Email_Format__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Contact_Phone_Email_Format__c</fullName>
    <description>Formatting onsite contact phone # for email purposes</description>
    <formula>&quot;(&quot; + LEFT(  Site_Contact_Phone__c , 3) + &quot;)-&quot; + MID(Site_Contact_Phone__c , 4, 3) + &quot;-&quot; + MID(Site_Contact_Phone__c , 7, 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Onsite Contact Phone Email Format</label>
    <type>Text</type>
</CustomField>