force-app/main/default/objects/Case/fields/Override_Company_Category_Create_Task__c.field-meta.xml
<CustomField>
    <fullName>Override_Company_Category_Create_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CC create Task</description>
    <label>Override Company Category - Create Task</label>
    <type>Checkbox</type>
</CustomField>