force-app/main/default/objects/Case/fields/Override_PO_Create_Task__c.field-meta.xml
<CustomField>
    <fullName>Override_PO_Create_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <description>checkbox to override the po field &amp; create task to obtained the same</description>
    <label>Override PO - Create Task</label>
    <type>Checkbox</type>
</CustomField>