force-app/main/default/objects/Case/fields/Override_Profile_Number_Task__c.field-meta.xml
<CustomField>
    <fullName>Override_Profile_Number_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Profile Number Task</label>
    <type>Checkbox</type>
</CustomField>