force-app/main/default/objects/Case/fields/Portal_Messages_URL__c.field-meta.xml
<CustomField>
    <fullName>Portal_Messages_URL__c</fullName>
    <formula>if(FIND(&quot;-&quot;,Tracking_Number__c) &gt; 0,$CustomMetadata.Integration_Request_URLs__mdt.Portal_Message.End_Point__c&amp;&quot;/Acorn/Controls/CustomereBusinessPortalMessages.aspx?&quot;&amp;&quot;IssueTrackingNumber=&quot; &amp; left(Tracking_Number__c,FIND(&quot;-&quot;, Tracking_Number__c)-1),$CustomMetadata.Integration_Request_URLs__mdt.Portal_Message.End_Point__c&amp;&quot;/Acorn/Controls/CustomereBusinessPortalMessages.aspx?&quot;&amp;&quot;IssueTrackingNumber=&quot; &amp; Tracking_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Portal Messages URL</label>
    <type>Text</type>
</CustomField>