force-app/main/default/objects/Case/fields/Premium_Delivery_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Premium_Delivery_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Premium Delivery Eligible</label>
    <type>Checkbox</type>
</CustomField>