force-app/main/default/objects/Case/fields/Premium_Service_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Premium_Service_Opt_Out__c</fullName>
    <label>Premium Service Opt Out</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price Too High</fullName>
            </value>
            <value>
                <fullName>6 Hour Service Not Needed</fullName>
            </value>
            <value>
                <fullName>Approval Not Given</fullName>
            </value>
            <value>
                <fullName>Different Service is Requested</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>