force-app/main/default/objects/Case/fields/Premium_Service_Opt_Out_Reason__c.field-meta.xml
<CustomField>
    <fullName>Premium_Service_Opt_Out_Reason__c</fullName>
    <label>Premium Service Opt Out Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>