force-app/main/default/objects/Case/fields/Price_Quote_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Price_Quote_Identifier__c</fullName>
    <description>Price Quote Identifier to store unique pricing ID created by API.</description>
    <label>Price Quote Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>