force-app/main/default/objects/Case/fields/Pricing_Request__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing Request</label>
    <referenceTo>Pricing_Request__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>